# r-scikit-learn

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: benchmarks.yml  ci.yml  release.yml  test-pypi.yml
benches/: benchmark_linear_models.py  benchmark_metrics.py  benchmark_neighbors.py  benchmark_preprocessing.py
python/rsklearn/: __init__.py  _validation.py  base.py  pipeline.py
python/rsklearn/compose/: __init__.py  _column_transformer.py
python/rsklearn/impute/: __init__.py  _simple_imputer.py
python/rsklearn/linear_model/: __init__.py  _base.py  _coordinate_descent.py  _least_squares.py  _logistic.py  _warnings.py
python/rsklearn/metrics/: __init__.py  _classification.py  _regression.py  _validation.py
python/rsklearn/model_selection/: __init__.py  _split.py  _utils.py  _validation.py
python/rsklearn/neighbors/: __init__.py  _base.py  _classification.py  _regression.py
python/rsklearn/preprocessing/: __init__.py  _base.py  _categorical.py  _label_encoder.py  _maxabs_scaler.py  _minmax_scaler.py  _normalizer.py  _one_hot_encoder.py  _ordinal_encoder.py  _robust_scaler.py  _standard_scaler.py
python/rsklearn/utils/: __init__.py  sparse.py  validation.py
src/: categorical.rs  error.rs  label_encoder.rs  lib.rs  linear_model.rs  maxabs_scaler.rs  metrics.rs  minmax_scaler.rs  neighbors.rs  normalizer.rs  robust_scaler.rs  simple_imputer.rs  sparse.rs  standard_scaler.rs
tests/: release_smoke.py  test_base.py  test_categorical_infrastructure.py  test_column_transformer.py  test_column_transformer_parity.py  test_estimator_compliance.py  test_label_encoder.py  test_linear_model.py  test_linear_model_parity.py  test_maxabs_scaler.py  test_metrics.py  test_metrics_parity.py  test_minmax_scaler.py  test_model_selection.py  test_model_selection_parity.py  test_neighbors.py  test_neighbors_parity.py  test_normalizer.py  test_one_hot_encoder.py  test_ordinal_encoder.py  test_pipeline.py  test_pipeline_parity.py  test_public_validation.py  test_robust_scaler.py  test_scikit_learn_parity.py  test_simple_imputer.py  test_sparse_infrastructure.py  test_standard_scaler.py  test_validation.py
