[package]
name = "r-scikit-learn-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust computational core for r-scikit-learn"
homepage = "https://github.com/rishib42/r-scikit-learn"
repository = "https://github.com/rishib42/r-scikit-learn"
include = [
  "/Cargo.lock",
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
  "/benches/*.py",
  "/pyproject.toml",
  "/python/**/*.py",
  "/python/**/py.typed",
  "/src/**",
  "/tests/*.py",
  "!**/.ipynb_checkpoints/**",
  "!**/__pycache__/**",
]

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
numpy = "0.28"
pyo3 = { version = "0.28", features = ["auto-initialize"] }
rustc-hash = "2"
thiserror = "2"

[profile.release]
lto = "thin"
codegen-units = 1
