[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "r-scikit-learn"
version = "0.1.0"
description = "High-performance scikit-learn-style machine learning powered by safe Rust"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "r-scikit-learn contributors" }]
keywords = ["machine-learning", "preprocessing", "rust", "numpy", "scikit-learn"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Typing :: Typed",
]
dependencies = ["numpy>=1.23", "scipy>=1.10"]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.100,<7",
  "maturin>=1.9,<2.0",
  "pytest>=8",
  "ruff>=0.11",
  "scikit-learn>=1.6",
]

[project.urls]
Homepage = "https://github.com/rishib42/r-scikit-learn"
Repository = "https://github.com/rishib42/r-scikit-learn"
Issues = "https://github.com/rishib42/r-scikit-learn/issues"
Changelog = "https://github.com/rishib42/r-scikit-learn/blob/main/CHANGELOG.md"

[tool.maturin]
python-source = "python"
module-name = "rsklearn._core"
features = ["pyo3/extension-module"]
exclude = ["python/**/__pycache__/**", "python/**/*.pyc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
